Feature/define copilot instructions (#73)
* [copilot-instructions] - Add copilot and editor instructions.

* [copilot-instructions] - Update tests to match requirements.